fix(thumbnails): cropperjs ratios and modes

--- a/app/components/folio/console/files/show/thumbnails/crop_edit_component.sass
+++ b/app/components/folio/console/files/show/thumbnails/crop_edit_component.sass
@@ -10,11 +10,12 @@
   &__editor,
   &__img-wrap
     align-items: center
-    aspect-ratio: 1 / 1
     background: $gray
     display: flex
     justify-content: center
     position: relative
+    width: 290px
+    height: 290px
 
   &__img
     display: block
@@ -49,3 +50,6 @@
   &__editor cropper-image
     width: 100% !important
     height: 100% !important
+
+    img
+      width: auto
